--- a/FiscaliZi.Colinfo/App.xaml
+++ b/FiscaliZi.Colinfo/App.xaml
@@ -2,7 +2,7 @@
     x:Class="FiscaliZi.Colinfo.App" 
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:vm="clr-namespace:FiscaliZi.Colinfo.Assert"
+    xmlns:vm="clr-namespace:FiscaliZi.Colinfo.Assets"
     xmlns:dragablz="clr-namespace:Dragablz;assembly=Dragablz"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:d1p1="http://schemas.openxmlformats.org/markup-compatibility/2006"
