--- a/FiscaliZi.Colinfo/Assets/ColetaView.xaml
+++ b/FiscaliZi.Colinfo/Assets/ColetaView.xaml
@@ -1,12 +1,12 @@
 ﻿<UserControl
-    x:Class="FiscaliZi.Colinfo.Assert.ColetaView"
+    x:Class="FiscaliZi.Colinfo.Assets.ColetaView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:Metro="http://metro.mahapps.com/winfx/xaml/controls"
     xmlns:Model="clr-namespace:FiscaliZi.Colinfo.Model"
-    xmlns:assert="clr-namespace:FiscaliZi.Colinfo.Assert"
+    xmlns:Assets="clr-namespace:FiscaliZi.Colinfo.Assets"
     xmlns:cal="http://www.caliburnproject.org"
     xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
     xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
@@ -122,7 +122,9 @@
                                                 cal:Message.Attach="RemoverVendedor($this)">
                                             <materialDesign:PackIcon Kind="Close"/>
                                         </Button>
-                                        <materialDesign:PackIcon Kind="{Binding Converter={StaticResource SituacaoCnpjIconVendConverter}}" HorizontalAlignment="Right" />
+                                        <materialDesign:PackIcon 
+                                            Kind="{Binding Pedidos, Converter={StaticResource SituacaoCnpjIconVendConverter}}"
+                                            HorizontalAlignment="Right" />
                                     </StackPanel>
                                 </Grid>
                             </Grid>
