--- a/FiscaliZi.Colinfo/Assets/Dialog_ErroConsulta.xaml
+++ b/FiscaliZi.Colinfo/Assets/Dialog_ErroConsulta.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="FiscaliZi.Colinfo.Assert.Dialog_ErroConsulta"
+﻿<UserControl x:Class="FiscaliZi.Colinfo.Assets.Dialog_ErroConsulta"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:FiscaliZi.Colinfo.Assert"
+             xmlns:local="clr-namespace:FiscaliZi.Colinfo.Assets"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:system="clr-namespace:System;assembly=mscorlib"
              mc:Ignorable="d" 
