--- a/FiscaliZi.Colinfo/Assets/MainView.xaml
+++ b/FiscaliZi.Colinfo/Assets/MainView.xaml
@@ -1,5 +1,5 @@
 ﻿<Metro:MetroWindow 
-    x:Class="FiscaliZi.Colinfo.Assert.MainView"                         
+    x:Class="FiscaliZi.Colinfo.Assets.MainView"                         
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"                   
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"       
@@ -9,7 +9,7 @@
     xmlns:dockablz="clr-namespace:Dragablz.Dockablz;assembly=Dragablz"
     xmlns:wpf="clr-namespace:MaterialDesignThemes.Wpf;assembly=MaterialDesignThemes.Wpf"
     xmlns:local="clr-namespace:FiscaliZi.Colinfo" 
-    xmlns:Assert="clr-namespace:FiscaliZi.Colinfo.Assert"
+    xmlns:Assets="clr-namespace:FiscaliZi.Colinfo.Assets"
     xmlns:cal="http://www.caliburnproject.org"
     xmlns:materialDesignMahApps="http://materialdesigninxaml.net/winfx/xaml/themes"
     mc:Ignorable="d"
@@ -40,7 +40,7 @@
                                  Margin="0,-1,0,1" 
                                  FixedHeaderCount="2" >
             <TabItem Header="COLETA">
-                <Assert:ColetaView cal:View.Model="{Binding ColetaVM}" Margin="8"/>
+                    <Assets:ColetaView cal:View.Model="{Binding ColetaVM}" Margin="8"/>
             </TabItem>
             <TabItem Header="OPÇÕES">
                 <dragablz:TabablzControl FixedHeaderCount="2"  >
