--- a/FiscaliZi.Colinfo/Assets/Dialog_Conculta.xaml
+++ b/FiscaliZi.Colinfo/Assets/Dialog_Conculta.xaml
@@ -37,6 +37,14 @@
                     Orientation="Vertical"
                     Margin="0 16 0 0">
             <TextBlock>
+                <Run Text="SIT: " FontWeight="Bold" FontSize="10.667"/>
+                <Run Text="{Binding Cliente.RetConsultaCadastro.infCons.cStat}" FontSize="10.667"/>
+            </TextBlock>
+            <TextBlock Margin="0,0,0,10">
+                <Run Text="MOT: " FontWeight="Bold" FontSize="10.667"/>
+                <Run Text="{Binding Cliente.RetConsultaCadastro.infCons.xMotivo}" FontSize="10.667"/>
+            </TextBlock>
+            <TextBlock>
                 <Run Text="INSCRIÇÕES" FontWeight="Bold" />
                 <Run Text="{Binding Cliente.RetConsultaCadastro.infCons.infCad.Count, Mode=OneWay, StringFormat='({0})'}" FontWeight="Bold" />
             </TextBlock>
