--- a/FiscaliZi.Colinfo/Assets/ColetaView.xaml
+++ b/FiscaliZi.Colinfo/Assets/ColetaView.xaml
@@ -7,23 +7,243 @@
              xmlns:Model="clr-namespace:FiscaliZi.Colinfo.Model"
              xmlns:cal="http://www.caliburnproject.org"
              xmlns:MDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-             mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300"
+             xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
+             mc:Ignorable="d"
              d:DataContext="{d:DesignInstance Type=Model:DesignData, IsDesignTimeCreatable=True}">
-    <StackPanel>
-        <MDesign:Card Background="{DynamicResource MaterialDesignBackground}"
-                             Margin="0 24 0 0">
-            <Expander HorizontalAlignment="Stretch"
-                      Header="301 (25)">
-            <StackPanel Orientation="Vertical"
-                            TextBlock.Foreground="{DynamicResource MaterialDesignBody}"
-                            Margin="24,8,24,16">
-                <TextBlock Text="Your Content" />
-                <ListBox x:Name="Pedidos" ItemsSource="{Binding Pedidos}"/>
-            </StackPanel>
-        </Expander>
+
+    <UserControl.Resources>
+        <Model:TotalValPedsConverter x:Key="TotalValPedsConverter" />
+        <Model:IsCNPJConverter x:Key="IsCnpjConverter"/>
+        <Model:TotalPedsConverter x:Key="TotalPedsConverter" />
+        <Model:ColetadosConverter x:Key="ColetadosConverter" />
+        <Model:SitCadastroClienteConverter x:Key="SitCadastroClienteConverter" />
+        <Model:RejeicoesCNPJConverter x:Key="RejeicoesCNPJConverter" />
+        <Model:Total_RejeicoesCNPJConverter x:Key="Total_RejeicoesCNPJConverter" />
+        <Model:Total_FormPgtConverter x:Key="Total_FormPgtConverter" />
+        <Model:RotaConverter x:Key="RotaConverter" />
+        <Model:SimplificaNomeVendedorConverter x:Key="SimplificaNomeVendedorConverter" />
+        <Model:SituacaoCNPJColorConverter x:Key="SituacaoCNPJColorConverter" />
+        <Model:SituacaoCNPJIconConverter x:Key="SituacaoCNPJIconConverter" />
+        <Model:CurrentAccentColorConverter x:Key="CurrentAccentColorConverter" />
+        <Model:SituacaoCNPJIconVendConverter x:Key="SituacaoCnpjIconVendConverter"/>
+        <Model:ShowConsultaConverter x:Key="ShowConsultaConverter" />
+        <Model:SituacaoCNPJIconVendBackgroundConverter x:Key="SituacaoCNPJIconVendBackgroundConverter"/>
+    </UserControl.Resources>
+
+    <Grid >
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="auto"/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <MDesign:Card 
+            Grid.Column="0" 
+            BorderThickness="3"
+            MinHeight="700" MinWidth="399">
+            <Grid x:Name="grdVendedores">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
+                <StackPanel 
+                    Grid.Row="0" 
+                    Orientation="Horizontal" 
+                    Margin="10,0">
+                    <DatePicker Width="195" HorizontalAlignment="Left" Text="05/02/2017" />
+                    <Button 
+                        cal:Message.Attach="AtualizaArquivos"
+                        HorizontalAlignment="Right" 
+                        Width="30" Padding="2 0 2 0"
+                        MDesign:RippleAssist.IsCentered="True">
+                        <MDesign:PackIcon Kind="Refresh" />
+                    </Button>
+                    <MDesign:PopupBox HorizontalAlignment="Right" Padding="2 0 2 0" Foreground="#FF918B8B">
+                        <StackPanel>
+                            <Button Content="More"/>
+                            <Button Content="Options"/>
+                        </StackPanel>
+                    </MDesign:PopupBox>
+                    <Button HorizontalAlignment="Right" Width="30" Padding="2 0 2 0"
+                            MDesign:RippleAssist.IsCentered="True"
+                            Style="{DynamicResource MaterialDesignFlatButton}">
+                        <MDesign:PackIcon Kind="Close" />
+                    </Button>
+                </StackPanel>
+                <Separator Grid.Row="1" Style="{StaticResource MaterialDesignDarkSeparator}" Margin="8 0 8 0"/>
+                <ListBox 
+                    x:Name="Arquivos" 
+                    ItemsSource="{Binding Arquivos}"
+                    IsSynchronizedWithCurrentItem="True" 
+                    SelectedIndex="-1" 
+                    Margin="10,0" Grid.Row="2"
+                    BorderThickness="3">
+                    <ListBox.Style>
+                        <StaticResource ResourceKey="CustomMaterialDesignListBox"/>
+                    </ListBox.Style>
+                    <ListBox.ItemTemplate>
+                        <DataTemplate x:Name="dtArquivos">
+                            <Grid>
+                                <Grid Height="40">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="32"/>
+                                        <ColumnDefinition Width="104"/>
+                                        <ColumnDefinition Width="87"/>
+                                        <ColumnDefinition Width="109"/>
+                                        <ColumnDefinition Width="25"/>
+                                    </Grid.ColumnDefinitions>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="20"/>
+                                        <RowDefinition Height="20"/>
+                                    </Grid.RowDefinitions>
+                                    <Rectangle 
+                                        Fill="{StaticResource businessman}" 
+                                        Grid.Column="0" Grid.Row="0" Grid.RowSpan="2"
+                                        Margin="0,1"/>
+                                    <TextBlock 
+                                        FontWeight="Bold" Grid.Column="1" Grid.Row="0" Width="Auto" Margin="3,3,0,0" FontSize="10.5" >
+                                        <TextBlock.Text>
+                                            <MultiBinding StringFormat="{}{0} ({1}) {2}">
+                                                <Binding Path="CodVendedor"/>
+                                                <Binding Path="Pedidos" Converter="{StaticResource RotaConverter}" />
+                                                <Binding Path="NomeVendedor" Converter="{StaticResource SimplificaNomeVendedorConverter}"/>
+                                            </MultiBinding>
+                                        </TextBlock.Text>
+                                    </TextBlock>
+                                    <TextBlock Grid.Column="1" Grid.Row="1" Margin="3,1,1,5.033"  Width="Auto" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Text="{Binding ArquivoVendedor}" FontSize="10.5" />
+                                    <TextBlock Grid.Column="2" Grid.Row="0" Margin="5,3,0,0" Height="Auto" Width="Auto" FontSize="10.5" d:LayoutOverrides="LeftMargin, RightMargin, TopMargin, BottomMargin"><Run Text="PED: " FontWeight="Bold"/><Run Text=" "/><Run Text="{Binding Pedidos.Count, Mode=OneWay}"/></TextBlock>
+                                    <TextBlock Grid.Column="2" Grid.Row="1" Margin="5,1,0,5.033" Width="Auto" FontSize="10.5" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" ><Run Text="PES: " FontWeight="Bold"/><Run Text=" "/><Run Text="000.000,00"/></TextBlock>
+                                    <TextBlock Grid.Column="3" Grid.Row="0" Margin="5,3,0,1" FontSize="10.5" Width="Auto" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"><Run Text="ENV: " FontWeight="Bold"/><Run Text=" "/><Run Text="{Binding DataEnvio, StringFormat=\{0:dd/MM hh:mm:ss\}}"/></TextBlock>
+                                    <TextBlock Grid.Column="3" Grid.Row="1" Margin="5,1,0,3" FontSize="10.5" HorizontalAlignment="Stretch" Width="Auto"><Run Text="VAL: " FontWeight="Bold"/><Run Text=" "/><Run Text="{Binding Pedidos, Converter={StaticResource TotalValPedsConverter}}"/></TextBlock>
+                                    <StackPanel Grid.Column="4" Grid.Row="0" Grid.RowSpan="2" Orientation="Vertical">
+                                        <Button HorizontalAlignment="Right" Width="Auto" Padding="2 0 2 0"
+                                                MDesign:RippleAssist.IsCentered="True"
+                                                Style="{DynamicResource MaterialDesignFlatButton}" Height="Auto"
+                                                cal:Message.Attach="RemoverArquivo($this)">
+                                            <MDesign:PackIcon Kind="Close"/>
+                                        </Button>
+                                        <MDesign:PackIcon 
+                                            Kind="{Binding Pedidos, Converter={StaticResource SituacaoCnpjIconVendConverter}}"
+                                            HorizontalAlignment="Right" Foreground="{Binding Kind, RelativeSource={RelativeSource Self}, Converter={StaticResource SituacaoCNPJIconVendBackgroundConverter}}" />
+                                    </StackPanel>
+                                </Grid>
+                            </Grid>
+
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                </ListBox>
+            </Grid>
         </MDesign:Card>
-        <TextBlock>COLETADOS</TextBlock>
-        <Button cal:Message.Attach="AtualizaPedidos">TESTE</Button>
-    </StackPanel>
+        <DataGrid x:Name="Pedidos"
+                  ItemsSource="{Binding Arquivos/Pedidos}"
+                  Grid.Column="1"
+                  AutoGenerateColumns="False" 
+                  CanUserAddRows="False" 
+                  CanUserResizeColumns="False" 
+                  CanUserReorderColumns="False" 
+                  CanUserDeleteRows="False" 
+                  CanUserResizeRows="False" 
+                  IsReadOnly="True" 
+                  HeadersVisibility="Column"
+                  IsSynchronizedWithCurrentItem="True" 
+                  Style="{DynamicResource DatagridCustomMDesign}" 
+                  CellStyle="{DynamicResource DatagridCellCustomMDesign}" 
+                  RowStyle="{DynamicResource DataGridRowCustomMDesign}"
+                  ColumnHeaderStyle="{StaticResource CustomMaterialDesignDataGridColumnHeader}" 
+                  Margin="10,0,0,0" SelectionUnit="CellOrRowHeader">
+            <DataGrid.Columns>
+                <DataGridTextColumn 
+                    Header="ROTA" 
+                    Binding="{Binding Cliente.Rota}"                                         
+                    CellStyle="{StaticResource DatagridCellCustomMDesign_CellCenter}"
+                    CanUserResize="False" />
+                <DataGridTextColumn Header="CLIENTE" 
+                                        CanUserResize="False" 
+                                        Width="70">
+                    <DataGridTextColumn.Binding>
+                        <MultiBinding StringFormat=" {0}-{1}">
+                            <Binding Path="Cliente.RegiaoCliente" />
+                            <Binding Path="Cliente.NumCliente" />
+                        </MultiBinding>
+                    </DataGridTextColumn.Binding>
+                </DataGridTextColumn>
+                <DataGridTextColumn Header="R. SOCIAL" Binding="{Binding Cliente.Razao}" CanUserResize="False" Width="200" />
+                <DataGridTextColumn Header="CNPJ" Binding="{Binding Cliente.CNPJ}"  CanUserResize="False" />
+                <DataGridTextColumn 
+                    Header="INSCRIÇÃO" 
+                    Binding="{Binding Cliente.IE}"  
+                    CanUserResize="False" 
+                    Width="120">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="{x:Type TextBlock}">
+                            <Setter Property="Margin" Value="10,0,0,0" />
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                </DataGridTextColumn>
+                <DataGridTextColumn Header="VAL. PED" 
+                                    Binding="{Binding ValorTotal}" 
+                                    CanUserResize="False" 
+                                    Width="80" />
+                <DataGridTemplateColumn 
+                    x:Name="dataGridTemplateColumn" 
+                    Header="SITUAÇÃO IE\CNPJ" 
+                    CellStyle="{StaticResource DatagridCellCustomMDesign_CellCenter}">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <StackPanel Orientation="Horizontal">
+                                <MDesign:PackIcon Kind="{Binding Text, ElementName=txtSituacao, Converter={StaticResource SituacaoCNPJIconConverter}}" 
+                                                         VerticalAlignment="Center" 
+                                                         Foreground="{Binding Text, ElementName=txtSituacao, Converter={StaticResource SituacaoCNPJColorConverter}}" 
+                                                         Margin="0,0,5,0"/>
+                                <TextBlock 
+                                    x:Name="txtSituacao" 
+                                    VerticalAlignment="Center" 
+                                    Width="63">
+                                    <TextBlock.Text>
+                                        <MultiBinding Converter="{StaticResource SitCadastroClienteConverter}" >
+                                            <Binding Path="Cliente.RetConsultaCadastro"/>
+                                            <Binding Path="Cliente.CNPJ"/>
+                                            <Binding Path="Cliente.IE"/>
+                                        </MultiBinding>
+                                    </TextBlock.Text>
+                                </TextBlock>
+                                <Button 
+                                    cal:Message.Attach="ShowConsulta($this)"
+                                    Style="{DynamicResource MaterialDesignToolButton}"
+                                    IsEnabled="{Binding Cliente.RetConsultaCadastro, Converter={StaticResource ShowConsultaConverter}}"
+                                    Height="25" Width="40">
+                                    <MDesign:PackIcon x:Name="icoDetalhe" Kind="ClipboardText" HorizontalAlignment="Center" />
+                                </Button>
+                                <Button 
+                                    cal:Message.Attach="ConsultaCadastro($this)"
+                                    Style="{DynamicResource MaterialDesignToolButton}"
+                                    IsEnabled="{Binding Cliente.CNPJ, Converter={StaticResource IsCnpjConverter}}"
+                                    Height="25" Width="40">
+                                    <MDesign:PackIcon x:Name="icoRefresh" Kind="Refresh" HorizontalAlignment="Center" />
+                                </Button>
+                            </StackPanel>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+                <DataGridTemplateColumn >
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <Button 
+                                Content="ITENS" 
+                                cal:Message.Attach="ShowPedidoFlyout($this)"
+                                Height="19" 
+                                FontSize="10" 
+                                Margin="0,3,5,3"
+                                controls:ControlsHelper.ContentCharacterCasing="Upper" 
+                                Width="66" 
+                                Grid.IsSharedSizeScope="True" 
+                                Padding="0,0,0,1" 
+                                FontWeight="Normal" />
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+            </DataGrid.Columns>
+        </DataGrid>
+    </Grid>
+
 </UserControl>
+
